	  still works (Issue 43)
	* improved trajectory writing
           - MDAnalysis.Writer() factory function that provides an
             appropriate writer for the desired file format
	   - Writer.write() accepts a Timestep, a Universe, or a 
	     arbitrary AtomGroup (e.g. from a selection); this is much
	     more flexible than Writer.write_next_timestep()
        * Changes to AtomGroup
          - Indexing is made consistent with the way lists behave:
            1. indexing with integers returns a single Atom
	    2. slicing always returns a new AtomGroup
	    3. advanced slicing with a list or array returns a new
	       AtomGroup (NEW, fixes Issue 36) 
	  - AtomGroup coordinates can be manipulated (translate(),
            rotate() and rotateby() methods; when appropriate, these methods
	    can take AtomGroups or arrays to determine coordinates)
	  - new attributes 'residues' and 'segments' for AtomGroup to give 
	    access to the list of residue/segment objects of the group 
	  - new exception 'NoDataError'; raised when creation of an empty
	    AtomGroup is attempted (see also Issue 12)
          - consistent representation of the Segment > Residue > Atom
	    hierarchy: all classes related to AtomGroup have the
	    attributes 'atoms', 'residues', 'segments' which provide
	    access to groups of the corresponding objects
	* improvements to Residue, ResidueGroup and Segment classes 
	  - documented accessing residues from Segment as
	    Segment.r<resid>; resid is 1-based -- BREAKS OLD CODE 
	    that relied on this being 0-based
          - added SegmentGroup class
	  - can write from Residue, ResidueGroup and Segment (Issue 46)
	  - residue name attribute of a Segment now consistently
	    returns a ResidueGroup (Issue 47) -- MIGHT BREAK OLD CODE
	  - added documentation and examples in the doc strings
	  - new special dihedral angle selections defined for Residue
	    class to simplify analysis of backbone torsions (experimental)